--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.gradientText {
+  background: linear-gradient(90deg, #5d74d9 0%, #FFFFFF 100%);
+}
+.gradient {
+  background: linear-gradient(90deg, #4c779b 0%, #b6bbc1 100%);
+}
